# nbody2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: nbody2022.hpp  nbody2022_bullet.hpp  nbody2022_cfg.in  nbody2022_sim.hpp
src/: nbody2022_bullet.cpp  nbody2022_main.cpp  nbody2022_sim.cpp
